--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -749,6 +749,12 @@ body {
     .bread-crumbs {
         padding: 29px 0 45px;
     }
+
+    .top-baner {
+        p {
+            width: 90%;
+        }
+    }
 }
 
 @media only screen and (max-width: 991.8px) {
@@ -856,8 +862,18 @@ body {
         font-size: 12px;
         line-height: 14px;
     }
-    .top-baner{
+
+    .top-baner {
         height: 204px;
+        .bread-crumbs {
+            padding-bottom: 25px;
+        }
+        .title-white {
+            margin-bottom: 6px;
+        }
+        p {
+            width: 95%;
+        }
     }
 }
 
@@ -881,6 +897,7 @@ body {
 
     .download-catalog {
         padding: 82px 0 92px;
+        overflow: hidden;
 
         &__wrap {
             padding: 18px 20px 0;
@@ -904,12 +921,9 @@ body {
         }
 
         &__img {
-            position: relative;
-            top: 20px;
-            right: 0;
-            left: -30px;
+            position: static;
+            margin: 20px 0 -120px -30px;
             max-width: calc(100% + 60px);
-            margin-bottom: -120px;
         }
     }
 
@@ -1063,14 +1077,22 @@ body {
         }
 
         &__img {
-            margin-bottom: -80px;
+            margin-bottom: -104px;
         }
     }
-    .top-baner{
-        height: 165px;
-    }
+
     .bread-crumbs{
         font-size: 10px;
         line-height: 12px;
+    }
+
+    .top-baner {
+        height: 165px;
+        .bread-crumbs {
+            padding-bottom: 16px;
+        }
+        p {
+            width: 100%;
+        }
     }
 }
