--- a/app/scss/layout/_roletta.scss
+++ b/app/scss/layout/_roletta.scss
@@ -64,9 +64,11 @@
         >h4 {
             position: absolute;
             left: 31px;
+            right: 30px;
             bottom: 18px;
             font-size: $font-size-h3;
             line-height: $line-height-h3;
+            font-weight: 900;
         }
     }
 }
@@ -509,6 +511,8 @@
             >h4 {
                 font-size: $font-size-h3 - 4px;
                 line-height: $line-height-h3 - 4px;
+                left: 18px;
+                right: 16px;
             }
         }
     }
