--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,8 @@
 @import "./layout/calculator";
 @import "./layout/assortement";
 
+@import "./layout/for-diller";
+
 @import "./layout/promotion";
 
 @import "./layout/footer";
