--- a/app/css/style.css
+++ b/app/css/style.css
@@ -139,13 +139,13 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .social-networks { display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
-.social-networks > li:first-child { margin-right: 17px; }
+.social-networks li:first-child { margin-right: 17px; }
 
-.social-networks > li > a { display: -webkit-flex; display: -ms-flexbox; display: flex; width: 25px; }
+.social-networks li > a { display: -webkit-flex; display: -ms-flexbox; display: flex; width: 25px; }
 
-.social-networks > li > a img { transform: scale(1); -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transition: -webkit-transform 0.3s ease; transition: transform 0.3s ease; transition: transform 0.3s ease, -webkit-transform 0.3s ease; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; }
+.social-networks li > a img { transform: scale(1); -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transition: -webkit-transform 0.3s ease; transition: transform 0.3s ease; transition: transform 0.3s ease, -webkit-transform 0.3s ease; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; }
 
-.social-networks > li > a img:hover { transform: scale(1.4); -webkit-transform: scale(1.4); -moz-transform: scale(1.4); -ms-transform: scale(1.4); -o-transform: scale(1.4); }
+.social-networks li > a img:hover { transform: scale(1.4); -webkit-transform: scale(1.4); -moz-transform: scale(1.4); -ms-transform: scale(1.4); -o-transform: scale(1.4); }
 
 .title-section { font-size: 60px; line-height: 72px; color: #000; font-weight: 900; }
 
@@ -215,9 +215,9 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 /* style for checkbox start */
 .label-checkbox { display: block; position: relative; width: 15px; height: 15px; margin: 0 15px 0 0; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.label-checkbox > input { position: absolute; opacity: 0; cursor: pointer; }
+.label-checkbox input { position: absolute; opacity: 0; cursor: pointer; }
 
-.label-checkbox > input:checked ~ .checkmark:after { display: block; }
+.label-checkbox input:checked ~ .checkmark:after { display: block; }
 
 .label-checkbox .checkmark { position: absolute; left: 0; top: 0; height: 15px; width: 15px; background-color: transparent; border: 1px solid #B1B1B1; }
 
@@ -226,9 +226,9 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 /* style radio input start */
 .label-radio-input { display: block; position: relative; height: 30px; width: 30px; border: 1px solid transparent; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; margin: 0; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.label-radio-input > input { position: absolute; opacity: 0; cursor: pointer; }
+.label-radio-input input { position: absolute; opacity: 0; cursor: pointer; }
 
-.label-radio-input > input:checked ~ .radio-input-checkmark { display: block; }
+.label-radio-input input:checked ~ .radio-input-checkmark { display: block; }
 
 .label-radio-input .radio-input-checkmark { position: absolute; display: none; left: -6px; top: -6px; width: 42px; height: 42px; border: 3px solid #fff; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2); border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; }
 
@@ -262,7 +262,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .download-catalog__form { margin-top: 42px; }
 
-.download-catalog__form > input { width: 350px; margin-bottom: 10px; }
+.download-catalog__form input { width: 350px; margin-bottom: 10px; }
 
 .download-catalog__form .btn-red { margin-top: 20px; }
 
@@ -277,11 +277,11 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .ready-order__form { margin-bottom: 30px; padding: 33px 96px 42px 66px; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
-.ready-order__form > form { max-width: 350px; }
+.ready-order__form form { max-width: 350px; }
 
-.ready-order__form > form .input-light { margin-bottom: 20px; }
+.ready-order__form form .input-light { margin-bottom: 20px; }
 
-.ready-order__form > form .btn-red { width: 100%; }
+.ready-order__form form .btn-red { width: 100%; }
 
 .ready-order__number { display: inline-block; font-size: 100px; line-height: 120px; font-weight: 900; opacity: 0.2; }
 
@@ -338,7 +338,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .download-catalog__wrap { padding: 48px 0 50px; }
   .download-catalog__title { font-size: 30px; line-height: 37px; }
   .download-catalog__form { margin-top: 30px; }
-  .download-catalog__form > input { width: 270px; }
+  .download-catalog__form input { width: 270px; }
   .download-catalog__form .btn-red { margin-top: 20px; }
   .download-catalog__img { top: -80px; right: -30px; max-width: 570px; }
   .order-takes { padding: 39px 0 33px; background-size: 54%; }
@@ -346,8 +346,8 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .order-takes__subtitle { font-size: 30px; line-height: 37px; }
   .ready-order { padding: 68px 0 76px; }
   .ready-order__form { margin-bottom: 49px; padding: 33px 30px 43px; }
-  .ready-order__form > form { max-width: 270px; }
-  .ready-order__form > form .input-light { margin-bottom: 30px; }
+  .ready-order__form form { max-width: 270px; }
+  .ready-order__form form .input-light { margin-bottom: 30px; }
   .ready-order__number { font-size: 70px; line-height: 90px; }
   .ready-order__text { margin-left: 33px; }
   .ready-order__text > h4 { font-size: 20px; line-height: 29px -4 px; margin-bottom: 14px; }
@@ -365,13 +365,13 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .spinner { width: 180px; }
   .title-text-border { font-size: 72px; line-height: 86px; margin-bottom: -17px; }
   .nav-pills .nav-link { height: 37px; padding-left: 26px; }
-  .social-networks > li > a { width: 23px; }
+  .social-networks li > a { width: 23px; }
   .download-catalog__wrap { padding: 48px 0 54px 30px; }
   .download-catalog__wrap p { font-size: 12px; line-height: 14px; }
   .download-catalog__title { font-size: 24px; line-height: 29px; }
   .download-catalog__img { top: -25px; right: -70px; max-width: 430px; }
   .order-takes__subtitle { font-size: 24px; line-height: 29px; }
-  .ready-order__form > form { min-width: 240px; }
+  .ready-order__form form { min-width: 240px; }
   .ready-order__number { font-size: 48px; line-height: 58px; }
   .ready-order__text > h4 { font-size: 18px; line-height: 22px; }
   .FAQ .title-text-border { margin-bottom: -60px; }
@@ -389,14 +389,14 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .download-catalog__wrap { padding: 18px 20px 0; }
   .download-catalog__wrap p { font-size: 12px; line-height: 14px; }
   .download-catalog__form { margin-top: 22px; }
-  .download-catalog__form > input { width: 100%; }
+  .download-catalog__form input { width: 100%; }
   .download-catalog__form .btn-red { width: 100%; }
   .download-catalog__img { position: static; margin: 20px 0 -120px -30px; max-width: calc(100% + 60px); }
   .order-takes { padding: 30px 0 27px; background-position: bottom 27px right; background-size: 470px; }
   .order-takes__subtitle { margin-top: 20px; margin-left: auto; width: 60%; padding: 22px 0; }
   .ready-order { padding: 92px 0 0; }
   .ready-order__form { padding: 28px 40px; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
-  .ready-order__form > form { max-width: 100%; width: 100%; margin-top: 22px; }
+  .ready-order__form form { max-width: 100%; width: 100%; margin-top: 22px; }
   .ready-order__card { margin-bottom: 30px; height: auto; }
   .FAQ { padding: 39px 0 78px; }
   .FAQ .title-text-border { margin-bottom: -58px; }
@@ -634,7 +634,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .reviews__desc .video { width: 100%; max-width: 255px; height: 150px; box-shadow: 15px 30px 30px rgba(0, 0, 0, 0.3); }
 
-.reviews__desc .video > iframe { width: 100%; height: 100%; }
+.reviews__desc .video iframe { width: 100%; height: 100%; }
 
 .slider-reviews { width: calc(100% + 30px); margin-left: -15px; }
 
