--- a/app/scss/layout/_inedx.scss
+++ b/app/scss/layout/_inedx.scss
@@ -315,7 +315,7 @@
             height: 150px;
             box-shadow: 15px 30px 30px $shadow-dark;
 
-            >iframe {
+            iframe {
                 width: 100%;
                 height: 100%;
             }
