--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1573,7 +1573,7 @@ main { min-height: 400px; }
 
 .fd-sixsect .fd-slide .left .pic-box { height: 547px; overflow: hidden; }
 
-.fd-sixsect .fd-slide .left .pic-box img { -o-object-fit: cover; object-fit: cover; width: 100%; height: 100%; -o-object-position: 50% 50%; object-position: 50% 50%; }
+.fd-sixsect .fd-slide .left .pic-box img { -o-object-fit: cover; object-fit: cover; max-width: 100%; max-height: 100%; -o-object-position: 50% 50%; object-position: 50% 50%; }
 
 .fd-sixsect .fd-slide .right .descr { max-width: 315px; }
 
@@ -1599,6 +1599,8 @@ main { min-height: 400px; }
 
 .fd-eightsect p { max-width: 345px; }
 
+.fd-ninesect { padding-bottom: 135px; border-bottom: 1px solid #DBDBDB; }
+
 .fd-ninesect .assortment-heading__title { margin-bottom: 0; }
 
 .fd-ninesect .orangebg-text { position: relative; margin-top: 20px; color: #fff; height: 61px; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; max-width: 345px; margin-bottom: 48px; }
@@ -1606,6 +1608,39 @@ main { min-height: 400px; }
 .fd-ninesect .orangebg-text img { position: absolute; right: 0; top: 0; z-index: -1; height: 100%; max-width: initial; }
 
 .fd-ninesect .title { font-weight: 300; max-width: 255px; font-size: 18px; line-height: 22px; }
+
+.fd-ninesect .fd-circles { margin-bottom: 0; }
+
+.fd-ninesect .diller-box__circle span { color: #000000; font-weight: 800; font-size: 100px; line-height: 120px; opacity: 0.2; }
+
+.fd.download-catalog { padding: 130px 0 225px; }
+
+.fd.download-catalog .btn-red { display: inline-block; text-align: center; background-image: url(../../image/icons/orion_download-document.svg); background-position: center right 20px; background-repeat: no-repeat; padding: 22px 0; }
+
+@media only screen and (max-width: 1770.8px) { .fd-topsect img.main-pic { width: 68%; }
+  .fd-eightsect { padding: 250px 0 250px 0; }
+  .fd-eightsect img { width: 60%; } }
+
+@media only screen and (max-width: 1440.8px) { .fd-eightsect { padding: 200px 0 200px 0; }
+  .fd-eightsect img { width: 55%; } }
+
+@media only screen and (max-width: 1300.8px) { .fd-eightsect { padding: 150px 0 150px 0; } }
+
+@media only screen and (max-width: 1199.8px) { .fd-topsect { height: 370px; }
+  .diller-box .diller-box__circle { width: 200px; height: 200px; }
+  .diller-box .diller-box__circle img { max-width: 75px; max-height: 75px; }
+  .diller-box .title { font-size: 20px; }
+  .fd-aftcircle .title-text-border.bigtext { font-size: 190px; }
+  .fd-aftcircle .title-text-border.bigtext span { font-size: 56px; }
+  .fd-secondsect { padding: 72px 0 100px 0; }
+  .fd-foursect, .fd-fivesect, .fd-eightsect { padding: 100px 0; }
+  .fd-sixsect .slider { padding: 100px 0 30px 0; }
+  .fd-foursect .orange-bg-text { height: 150px; }
+  .fd-foursect .orange-bg-text p { font-size: 30px; }
+  .fd-sixsect .fd-slide .right .pic-box { height: 215px; }
+  .fd-sixsect .fd-slide { padding-bottom: 0; }
+  .fd-sevensect { height: 370px; padding-top: 100px; }
+  .fd-eightsect img { top: 15px; } }
 
 .promotions_cards .cards-dark:not(:first-child) { margin-top: 50px; }
 
