--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./layout/assortement";
 
 @import "./layout/for-diller";
+@import "./layout/whoweare";
 
 @import "./layout/promotion";
 @import "./layout/goods";
